--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,10 @@
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
-    <h1>Aca vamos a hacer un blog post</h1>
-    <p>Este es el parrafo inicial</p>
+    <div id="container">
+        <div id="post">
+            <h1>Este es el titulo atractivo del post</h1>
+            <p>Este es el parrafo en el que se explican las cosas increibles que se pueden hacer con las ramas</p>
+    </div>
 </body>
 </html>
