--- a/blogpost.html
+++ b/blogpost.html
@@ -9,9 +9,11 @@
 </head>
 <body>
     <div id="container">
-        <div id="post">
-            <h1>Este es el titulo atractivo del post</h1>
-            <p>Este es el parrafo en el que se explican las cosas increibles que se pueden hacer con las ramas</p>
+        <div id="cabecera">
+            cabecera
+             <div id="post">
+                  <h1>Este es el titulo atractivo del post</h1>
+                  <p>Este es el parrafo en el que se explican las cosas increibles que se pueden hacer con las ramas</p>
     </div>
 </body>
 </html>
