--- a/blogpost.html
+++ b/blogpost.html
@@ -10,7 +10,8 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            Hyperblog
+            Hyperblog <span id="tagline">Tu blog de confianza </span>
+            </div>
              <div id="post">
                   <h1>Este es el titulo atractivo del post</h1>
                   <p>Este es el parrafo en el que se explican las cosas increibles que se pueden hacer con las ramas</p>
