--- a/blogpost.html
+++ b/blogpost.html
@@ -12,6 +12,7 @@
         <div id="post">
             <h1>Este es el titulo atractivo del post</h1>
             <p>Este es el parrafo en el que se explican las cosas increibles que se pueden hacer con las ramas</p>
+            <p>Este blog es para compartir mi progreso en el curso de git y github y mostrar mis habilidades con html y css</p>
     </div>
 </body>
 </html>
