--- a/blogpost.html
+++ b/blogpost.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id="cabecera">
-        Hyperblog <span id="tagline">Tu blog de confianza </span>
+        Hyperblog <span id="tagline">Tu blog maestro </span>
         </div>
     <div id="container">
         <div id="post">
@@ -17,6 +17,8 @@
             <p>Este es el parrafo en el que se explican las cosas increibles que se pueden hacer con las ramas</p>
             <p>Este es el parrafo en el que se explican las cosas increibles que se pueden hacer con las ramas</p>
             <p>Este blog es para compartir mi progreso en el curso de git y github y mostrar mis habilidades con html y css</p>
+            <br>
+            <p>holaaa</p>
     </div>
 </body>
 </html>
