--- a/blogpost.html
+++ b/blogpost.html
@@ -5,13 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bienvenido a hyperblog 2.0</title>
-    <link rel="stylesheet" href="css/estilos.css">
+    <link rel="stylesheet" href="css/estilos.css" />
 </head>
 <body>
-    <div id="cabecera">
-        Hyperblog <span id="tagline">Tu blog de cabecera </span>
-        </div>
     <div id="container">
+        <div id="cabecera">
+            <img id="logo" src="/home/nahuel/Imágenes/dragon.png" />
+            hyperblog
+            <span id="tagline"> Tu blog de cabecera</span>
+        </div>
         <div id="post">
             <h1>Este es el titulo atractivo del post</h1>
             <p>Este es el parrafo en el que se explican las cosas increibles que se pueden hacer con las ramas</p>
@@ -19,6 +21,7 @@
             <p>Este blog es para compartir mi progreso en el curso de git y github y mostrar mis habilidades con html y css</p>
             <br>
             <p>holaaa</p>
+        </div>
     </div>
 </body>
 </html>
