Cabecera footer terminado

--- a/blogpost.html
+++ b/blogpost.html
@@ -20,5 +20,8 @@
             <br>
             <p>holaaa</p>
     </div>
+    <div id="footer">
+        Hecho con amor por Nahuel &lt;3
+    </div>
 </body>
 </html>
